--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
